        - fix call failure when host has multiple IP addresses
        - fix buddy list handling after moving to Lync 2013
          * Lync 2013 migrates buddy list to Unified Contact Store (UCS)
          * NOTE: modifying the buddy list is *NOT* supported yet!
        - crash fixes for new HTTP stack
  * Bumped debhelper compat to level 9, reworked d/rules to use dh.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Sun, 14 Jul 2013 11:41:17 +0200

pidgin-sipe (1.16.0-1) unstable; urgency=low

  [ Jakub Adam ]
  * New upstream release (Closes: #713009).
        - Feature #58: Implement Digest authentication scheme for
          SIP Proxy Authentication
        - Fixed #196: Useragent value not forwarded to core
        - Fixed #193: Pidgin Status changes stop working
        - Fixed #186: Users appear offline when they are not
        - fix kinit-less use case with krb5 >= 1.11
        - rewritten HTTP stack from scratch
          * cleaner, layered and hopefully less error-prone implementation
          * HTTP stack internals no longer exposed to user code
          * reduced network traffic and less SSL handshakes by utilizing
            HTTP/1.1 connection keep alive for multiple HTTP requests to
            the same host
        - switch purple backend to deferred destruction approach
          * Pidgin should no longer crash at connection close, even in
            corner cases
        - add menu entry to make a call with a phone number
        - some progress on telepathy backend
          * add TLS certificate accept/reject user interaction
          * add "Single Sign-On" & "Don't Publish Calendar" account options
  * Depend on libnice-dev (>= 0.1.4) for it has voice call related fixes.
  * Use xz for upstream tarball compression.

  [ Dominique Dumont ]
  * copyright: added missing license on src/adium autogen.sh ltmain.sh

 -- Jakub Adam <jakub.adam@ktknet.cz>  Mon, 24 Jun 2013 20:14:30 +0200

pidgin-sipe (1.15.0-1) experimental; urgency=low

  [ Jakub Adam ]