@@ -7,6 +7,7 @@ pidgin-sipe (1.16.1-1) UNRELEASED; urgency=low
           * NOTE: modifying the buddy list is *NOT* supported yet!
         - crash fixes for new HTTP stack
   * Bumped debhelper compat to level 9, reworked d/rules to use dh.
+  * Fixed clean target to remove all generated files.
 
  -- Jakub Adam <jakub.adam@ktknet.cz>  Sun, 14 Jul 2013 11:41:17 +0200
 
